--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,12 @@
-*     text=auto eol=lf
-*.c   diff=cpp
-*.h   diff=cpp
-*.dtsi diff=dts
-*.dts  diff=dts
+#
+# By default text files won't be converted to CRLF on windows
+#
+*	text=auto eol=lf
+
+#
+# Insert below specific files for which you want to override the rules
+# (you can create .gitattributes files in sub directories)
+# Example:
+#
+#  MyCRLFFile.txt text eol=crlf
+#
